# rust_codekata

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
data/: wordlist_old.txt
src/: common.rs  ideas.txt  kata1_pricing.rs  kata2_chop.rs  kata4_munging.rs  kata5_bloom.rs  kata6_anagrams.rs  kata8_objectives.rs  main.rs
